# TagManager

./: .gitignore  README.md  pyproject.toml
TagManager/VideoManager/: Program.cs  VideoManager.csproj  VideoManager.sln
TagManager/VideoManager/Components/: App.razor  _Imports.razor
TagManager/VideoManager/Components/Layout/: NavMenu.razor
TagManager/VideoManager/Components/Pages/: Counter.razor  Editor.razor  NewExplorer.razor  TagManager.razor  Weather.razor  _Host.cshtml
TagManager/VideoManager/Controllers/: AntiforgeryController.cs  ExportController.cs  ProcessFileController.cs
TagManager/VideoManager/Models/: Model.cs
TagManager/VideoManager/Properties/: launchSettings.json
TagManager/VideoManager/wwwroot/js/: site.js
