[tool.poetry]
name = "TagManager"
version = "0.0.1"
description = "A utility for tagging saved contents"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "TagManager"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"